<resources>
    <string name="app_name">Project - Medizen Hub</string>
    <string name="designer_info">Design By\nDeeksha S</string>
    <string name="next">Next</string>
    <string name="delivering_health_to_nyour_doorstep">Delivering health to \nyour doorstep</string>
    <string name="main">Main</string>
    <string name="design_by_ndeeksha_s">Design By \nDeeksha S</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="continue_with">Continue With</string>
    <string name="or">or</string>
    <string name="password">PASSWORD</string>
    <string name="logo">logo</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="email">EMAIL</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="name">NAME</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="email1">EMAIL</string>
    <string name="password1">PASSWORD</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="explore_your_medzz">Explore your Medzz..</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Cart">Cart</string>
    <string name="Search">Search</string>
    <string name="textview">TextView</string>
    <string name="explore_your_medz">EXPLORE YOUR MEDZZ</string>
    <string name="asozen_plus">Asozen Plus</string>
    <string name="_15_48_rs">15.48 RS</string>
    <string name="des_arthritis">Des : Arthritis</string>
    <string name="_0">0</string>
    <string name="flucold">Flucold</string>
    <string name="_20_01_rs">20.01 RS</string>
    <string name="des_cold">Des : Cold</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
</resources>