<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:id="@+id/homeFragment"
        tools:ignore="home" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/cart"
        android:icon="@drawable/cart"
        android:id="@+id/cartFragment"
        tools:ignore="cart" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/search"
        android:icon="@drawable/search"
        android:id="@+id/searchFragment"
        tools:ignore="search"/>

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        android:id="@+id/profileFragment"
        tools:ignore="profile" />
</menu>